<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bicicom.fluentmapper</groupId>
    <artifactId>fluentmapper-parent</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>
    <modules>
        <module>fluentmapper-core</module>
        <module>fluentmapper-api</module>
        <module>fluentmapper-provider</module>
        <module>fluentmapper-maven-plugin</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>
